fix: adding left-align for mobile devices.

--- a/src/sections/About/style.css
+++ b/src/sections/About/style.css
@@ -1,9 +1,3 @@
-.about {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 .about-container {
   max-width: 780px;
   display: grid;
@@ -18,7 +12,6 @@
 .about-text p {
   font-size: var(--p-font);
   font-weight: 400;
-  text-align: center;
 }
 .about-text p a {
   color: var(--main-color);
@@ -41,9 +34,6 @@
 }
 .cv {
   margin-top: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 @media (max-width: 820px) {
@@ -51,9 +41,6 @@
     gap: 3rem;
   }
   .about-text {
-    text-align: center;
-  }
-  .about-text p {
     text-align: center;
   }
   .about-text .information {
